ECA-8672: Fix trivial warnings in cesecore-common
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@33802 37aeb1de-b14b-0410-9a0e-82b28170d228